--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2107,4 +2107,5 @@
     <string name="model_dat_2x">2-кратнае павелічэнне маштабу з дапамогай тэхналогіі Dual Aggregation Transformer, захоўвае рэзкасць і натуральныя дэталі.</string>
     <string name="model_dat_3x">3-кратнае павелічэнне з выкарыстаннем перадавой архітэктуры трансфарматара, ідэальнае для ўмераных патрэб пашырэння.</string>
     <string name="model_dat_4x">4-кратнае высакаякаснае павышэнне маштабу з сучаснай сеткай трансфарматараў, захоўвае дробныя дэталі ў вялікіх маштабах.</string>
+    <string name="model_nafnet_deblurring">Выдаляе размытасць/шум і дрыгаценне фатаграфій. Агульнага прызначэння, але лепш за ўсё на фота.</string>
 </resources>
