--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">ডুয়াল অ্যাগ্রিগেশন ট্রান্সফরমার প্রযুক্তির সাথে 2x আপস্কেলিং, তীক্ষ্ণতা এবং প্রাকৃতিক বিবরণ বজায় রাখে।</string>
     <string name="model_dat_3x">উন্নত ট্রান্সফরমার আর্কিটেকচার ব্যবহার করে 3x আপস্কেলিং, মাঝারি বৃদ্ধির প্রয়োজনের জন্য আদর্শ।</string>
     <string name="model_dat_4x">অত্যাধুনিক ট্রান্সফরমার নেটওয়ার্কের সাথে 4x উচ্চ-মানের আপস্কেলিং, বড় স্কেলে সূক্ষ্ম বিবরণ সংরক্ষণ করে।</string>
+    <string name="model_nafnet_deblurring">ফটো থেকে ঝাপসা/গোলমাল এবং ঝাঁকুনি সরিয়ে দেয়। সাধারণ উদ্দেশ্য কিন্তু ফটোতে সেরা।</string>
 </resources>
