--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">डुअल एग्रीगेशन ट्रांसफार्मर तकनीक के साथ 2x अपस्केलिंग, तीक्ष्णता और प्राकृतिक विवरण बनाए रखता है।</string>
     <string name="model_dat_3x">उन्नत ट्रांसफॉर्मर आर्किटेक्चर का उपयोग करके 3x अपस्केलिंग, मध्यम विस्तार आवश्यकताओं के लिए आदर्श।</string>
     <string name="model_dat_4x">अत्याधुनिक ट्रांसफार्मर नेटवर्क के साथ 4x उच्च-गुणवत्ता वाला अपस्केलिंग, बड़े पैमाने पर बारीक विवरणों को संरक्षित करता है।</string>
+    <string name="model_nafnet_deblurring">फ़ोटो से धुंधलापन/शोर और कंपन हटाता है। सामान्य प्रयोजन लेकिन तस्वीरों में सर्वोत्तम।</string>
 </resources>
