--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">Қос біріктіру трансформаторы технологиясымен 2 есе үлкейту, анықтық пен табиғи бөлшектерді сақтайды.</string>
     <string name="model_dat_3x">Трансформатордың жетілдірілген архитектурасын пайдаланып масштабты 3 есе арттыру, қалыпты үлкейту қажеттіліктері үшін өте қолайлы.</string>
     <string name="model_dat_4x">Соңғы үлгідегі трансформатор желісімен 4 есе жоғары сапалы масштабтау, үлкенірек масштабта ұсақ бөлшектерді сақтайды.</string>
+    <string name="model_nafnet_deblurring">Фотосуреттердегі бұлыңғырлықты/ шуды және дірілдерді жояды. Жалпы мақсат, бірақ фотосуреттерде жақсы.</string>
 </resources>
