--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2106,4 +2106,5 @@
     <string name="model_dat_2x">ड्युअल एग्रीगेशन ट्रान्सफॉर्मर तंत्रज्ञानासह 2x अपस्केलिंग, तीक्ष्णता आणि नैसर्गिक तपशील राखते.</string>
     <string name="model_dat_3x">प्रगत ट्रान्सफॉर्मर आर्किटेक्चरचा वापर करून 3x अपस्केलिंग, मध्यम विस्तार गरजांसाठी आदर्श.</string>
     <string name="model_dat_4x">अत्याधुनिक ट्रान्सफॉर्मर नेटवर्कसह 4x उच्च-गुणवत्तेचे अपस्केलिंग, मोठ्या प्रमाणात सूक्ष्म तपशील जतन करते.</string>
+    <string name="model_nafnet_deblurring">फोटोंमधून अस्पष्टता/आवाज आणि शेक काढून टाकते. सामान्य हेतू परंतु फोटोंसाठी सर्वोत्तम.</string>
 </resources>
