--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">ਡੁਅਲ ਐਗਰੀਗੇਸ਼ਨ ਟ੍ਰਾਂਸਫਾਰਮਰ ਤਕਨਾਲੋਜੀ ਨਾਲ 2x ਅਪਸਕੇਲਿੰਗ, ਤਿੱਖਾਪਨ ਅਤੇ ਕੁਦਰਤੀ ਵੇਰਵਿਆਂ ਨੂੰ ਬਣਾਈ ਰੱਖਦਾ ਹੈ।</string>
     <string name="model_dat_3x">ਉੱਨਤ ਟ੍ਰਾਂਸਫਾਰਮਰ ਆਰਕੀਟੈਕਚਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹੋਏ 3x ਅਪਸਕੇਲਿੰਗ, ਮੱਧਮ ਵਾਧੇ ਦੀਆਂ ਲੋੜਾਂ ਲਈ ਆਦਰਸ਼।</string>
     <string name="model_dat_4x">ਅਤਿ-ਆਧੁਨਿਕ ਟਰਾਂਸਫਾਰਮਰ ਨੈਟਵਰਕ ਦੇ ਨਾਲ 4x ਉੱਚ-ਗੁਣਵੱਤਾ ਅਪਸਕੇਲਿੰਗ, ਵੱਡੇ ਪੈਮਾਨੇ \'ਤੇ ਵਧੀਆ ਵੇਰਵਿਆਂ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਦੀ ਹੈ।</string>
+    <string name="model_nafnet_deblurring">ਫੋਟੋਆਂ ਤੋਂ ਧੁੰਦਲਾ/ਸ਼ੋਰ ਅਤੇ ਹਿੱਲਣ ਨੂੰ ਹਟਾਉਂਦਾ ਹੈ। ਆਮ ਮਕਸਦ ਪਰ ਫੋਟੋਆਂ \'ਤੇ ਵਧੀਆ।</string>
 </resources>
