--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2107,4 +2107,5 @@
     <string name="model_dat_2x">Двукратное масштабирование с помощью технологии Dual Aggregation Transformer обеспечивает четкость и естественные детали.</string>
     <string name="model_dat_3x">3-кратное масштабирование с использованием усовершенствованной архитектуры трансформатора, идеально подходящее для умеренных потребностей в расширении.</string>
     <string name="model_dat_4x">Четырехкратное высококачественное масштабирование с использованием современной трансформаторной сети сохраняет мелкие детали в больших масштабах.</string>
+    <string name="model_nafnet_deblurring">Удаляет размытие/шум и дрожание фотографий. Общего назначения, но лучше всего на фотографиях.</string>
 </resources>
