--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2106,4 +2106,5 @@
     <string name="model_dat_2x">ද්විත්ව එකතු කිරීමේ ට්‍රාන්ස්ෆෝමර් තාක්‍ෂණය සමඟ 2x ඉහළ නැංවීම, තියුණු බව සහ ස්වාභාවික විස්තර පවත්වා ගනී.</string>
     <string name="model_dat_3x">උසස් ට්‍රාන්ස්ෆෝමර් ගෘහ නිර්මාණ ශිල්පය භාවිතයෙන් 3x ඉහළ නැංවීම, මධ්‍යස්ථ විශාල කිරීමේ අවශ්‍යතා සඳහා වඩාත් සුදුසුය.</string>
     <string name="model_dat_4x">අති නවීන ට්‍රාන්ස්ෆෝමර් ජාලය සමඟ 4x උසස් තත්ත්වයේ ඉහළ නැංවීම, විශාල පරිමාණයෙන් සියුම් තොරතුරු ආරක්ෂා කරයි.</string>
+    <string name="model_nafnet_deblurring">ඡායාරූප වලින් නොපැහැදිලි/ශබ්ද සහ සෙලවීම් ඉවත් කරයි. සාමාන්‍ය අරමුණ නමුත් ඡායාරූප මත හොඳම.</string>
 </resources>
