--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2106,4 +2106,5 @@
     <string name="model_dat_2x">2к повећање помоћу технологије Дуал Аггрегатион Трансформер, одржава оштрину и природне детаље.</string>
     <string name="model_dat_3x">3к повећање помоћу напредне трансформаторске архитектуре, идеално за умерене потребе повећања.</string>
     <string name="model_dat_4x">4к висококвалитетно повећање са најсавременијом мрежом трансформатора, чува фине детаље у већим размерама.</string>
+    <string name="model_nafnet_deblurring">Уклања замућење/шум и подрхтавање фотографија. Опште намене, али најбоље на фотографијама.</string>
 </resources>
