--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">டூயல் அக்ரிகேஷன் டிரான்ஸ்ஃபார்மர் தொழில்நுட்பத்துடன் 2x அப்ஸ்கேலிங், கூர்மை மற்றும் இயற்கை விவரங்களை பராமரிக்கிறது.</string>
     <string name="model_dat_3x">மேம்பட்ட மின்மாற்றி கட்டமைப்பைப் பயன்படுத்தி 3x உயர்த்துதல், மிதமான விரிவாக்கத் தேவைகளுக்கு ஏற்றது.</string>
     <string name="model_dat_4x">அதிநவீன மின்மாற்றி நெட்வொர்க்குடன் 4x உயர்தர மேம்பாடு, பெரிய அளவுகளில் சிறந்த விவரங்களைப் பாதுகாக்கிறது.</string>
+    <string name="model_nafnet_deblurring">படங்களிலிருந்து மங்கல்/சத்தம் மற்றும் குலுக்கல்களை நீக்குகிறது. பொதுவான நோக்கம் ஆனால் புகைப்படங்களில் சிறந்தது.</string>
 </resources>
