--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">డ్యూయల్ అగ్రిగేషన్ ట్రాన్స్‌ఫార్మర్ టెక్నాలజీతో 2x అప్‌స్కేలింగ్, పదును మరియు సహజ వివరాలను నిర్వహిస్తుంది.</string>
     <string name="model_dat_3x">ఆధునిక ట్రాన్స్‌ఫార్మర్ ఆర్కిటెక్చర్ ఉపయోగించి 3x అప్‌స్కేలింగ్, మితమైన విస్తరణ అవసరాలకు అనువైనది.</string>
     <string name="model_dat_4x">అత్యాధునిక ట్రాన్స్‌ఫార్మర్ నెట్‌వర్క్‌తో 4x అధిక-నాణ్యత అప్‌స్కేలింగ్, పెద్ద ప్రమాణాల వద్ద చక్కటి వివరాలను భద్రపరుస్తుంది.</string>
+    <string name="model_nafnet_deblurring">ఫోటోల నుండి బ్లర్/నాయిస్ మరియు షేక్‌లను తొలగిస్తుంది. సాధారణ ప్రయోజనం కానీ ఫోటోలలో ఉత్తమమైనది.</string>
 </resources>
