--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2104,4 +2104,5 @@
     <string name="model_dat_2x">เพิ่มสเกล 2 เท่าด้วยเทคโนโลยี Dual Aggregation Transformer รักษาความคมชัดและรายละเอียดที่เป็นธรรมชาติ</string>
     <string name="model_dat_3x">การขยายขนาด 3 เท่าโดยใช้สถาปัตยกรรมหม้อแปลงขั้นสูง เหมาะสำหรับความต้องการในการขยายระดับปานกลาง</string>
     <string name="model_dat_4x">การเพิ่มสเกลคุณภาพสูง 4 เท่าด้วยเครือข่ายหม้อแปลงที่ล้ำสมัย ช่วยรักษารายละเอียดเล็กๆ น้อยๆ ในสเกลที่ใหญ่ขึ้น</string>
+    <string name="model_nafnet_deblurring">ลบภาพเบลอ/นอยส์ และความสั่นออกจากภาพถ่าย วัตถุประสงค์ทั่วไป แต่ดีที่สุดในภาพถ่าย</string>
 </resources>
