--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">قوش يىغىلىش تىرانسفورموتور تېخنىكىسى بىلەن 2x يۇقىرى كۆتۈرۈلۈپ ، ئۆتكۈرلۈك ۋە تەبىئىي تەپسىلاتلارنى ساقلايدۇ.</string>
     <string name="model_dat_3x">ئىلغار تىرانسفورموتور قۇرۇلمىسىنى ئىشلىتىپ 3x يۇقىرى كۆتۈرۈش ، ئوتتۇراھال چوڭايتىش ئېھتىياجىغا ماس كېلىدۇ.</string>
     <string name="model_dat_4x">زامانىۋى تىرانسفورموتور تورى بىلەن 4x يۇقىرى سۈپەتلىك يۇقىرى كۆتۈرۈلۈش ، تېخىمۇ چوڭ كۆلەمدە ئىنچىكە تەپسىلاتلارنى ساقلايدۇ.</string>
+    <string name="model_nafnet_deblurring">سۈرەتتىكى تۇتۇق / شاۋقۇننى ۋە تەۋرىنىشنى يوقىتىدۇ. ئومۇمىي مەقسەت ئەمما سۈرەتتىكى ئەڭ ياخشى.</string>
 </resources>
