--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2107,4 +2107,5 @@
     <string name="model_dat_2x">2-кратне збільшення за допомогою технології Dual Aggregation Transformer, зберігає різкість і природні деталі.</string>
     <string name="model_dat_3x">3-кратне збільшення за допомогою вдосконаленої трансформаторної архітектури, що ідеально підходить для потреб помірного розширення.</string>
     <string name="model_dat_4x">4-кратне високоякісне збільшення за допомогою найсучаснішої трансформаторної мережі, зберігає дрібні деталі у великих масштабах.</string>
+    <string name="model_nafnet_deblurring">Усуває розмиття/шуми та тремтіння фотографій. Загального призначення, але найкраще на фото.</string>
 </resources>
