--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">ارتقاء 2 برابری با فناوری Dual Aggregation Transformer، وضوح و جزئیات طبیعی را حفظ می کند.</string>
     <string name="model_dat_3x">ارتقاء 3 برابری با استفاده از معماری پیشرفته ترانسفورماتور، ایده آل برای نیازهای بزرگنمایی متوسط.</string>
     <string name="model_dat_4x">ارتقاء 4 برابری با کیفیت بالا با شبکه ترانسفورماتور پیشرفته، جزئیات دقیق را در مقیاس های بزرگتر حفظ می کند.</string>
+    <string name="model_nafnet_deblurring">تاری/نویز و لرزش را از عکس ها حذف می کند. هدف کلی اما بهترین در عکس.</string>
 </resources>
