--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2107,4 +2107,5 @@
     <string name="model_dat_2x">Dwukrotne skalowanie dzięki technologii podwójnego transformatora agregującego pozwala zachować ostrość i naturalne szczegóły.</string>
     <string name="model_dat_3x">3-krotne skalowanie przy użyciu zaawansowanej architektury transformatorowej, idealne do umiarkowanych potrzeb powiększenia.</string>
     <string name="model_dat_4x">4-krotne skalowanie wysokiej jakości dzięki najnowocześniejszej sieci transformatorowej pozwala zachować drobne szczegóły w większych skalach.</string>
+    <string name="model_nafnet_deblurring">Usuwa rozmycie/szumy i drgania ze zdjęć. Ogólnego przeznaczenia, ale najlepiej na zdjęciach.</string>
 </resources>
