--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2106,4 +2106,5 @@
     <string name="model_dat_2x">2x upscaling cu tehnologia Dual Aggregation Transformer, menține claritatea și detaliile naturale.</string>
     <string name="model_dat_3x">Upscaling de 3x folosind arhitectura avansată a transformatorului, ideală pentru nevoi moderate de extindere.</string>
     <string name="model_dat_4x">Upscaling de înaltă calitate de 4x cu o rețea de transformatoare de ultimă generație, păstrează detaliile fine la o scară mai mare.</string>
+    <string name="model_nafnet_deblurring">Îndepărtează neclaritatea/zgomotul și tremurăturile din fotografii. Scop general, dar cel mai bine pentru fotografii.</string>
 </resources>
