--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2105,4 +2105,5 @@
     <string name="model_dat_2x">Çift Toplama Transformatörü teknolojisiyle 2 kat yükseltme, keskinliği ve doğal ayrıntıları korur.</string>
     <string name="model_dat_3x">Orta düzeydeki genişletme ihtiyaçları için ideal olan gelişmiş transformatör mimarisini kullanan 3 kat ölçeklendirme.</string>
     <string name="model_dat_4x">Son teknoloji trafo ağıyla 4 kat yüksek kalite yükseltme, daha büyük ölçeklerde ince ayrıntıları korur.</string>
+    <string name="model_nafnet_deblurring">Fotoğraflardan bulanıklığı/gürültüyü ve titremeyi giderir. Genel amaçlı ama fotoğraflarda en iyisi.</string>
 </resources>
